@@ -7,6 +7,7 @@ Bug fixes:
 - PR#4380: ocamlbuild should not use tput on windows
 - PR#4552: ocamlbuild does not create symlinks when using '.itarget' file
 - PR#4794, PR#4959: call annotations not generated by ocamlopt
+- PR#4928: wrong printing of classes and class types by camlp4
 - PR#4967: ocamlbuild passes wrong switches to ocamldep through menhir
 - PR#4972: mkcamlp4 does not include 'dynlink.cma'
 - PR#5039: ocamlbuild should use '-linkpkg' only when linking programs
